# mri-reconstruction

./: .gitignore  Dockerfile  Makefile  README.md  mri-reconstruction-project-spec.md  pyproject.toml  requirements.txt  run.ps1
configs/: default.yaml  eval.yaml  fastmri_knee_split.yaml  synthetic.yaml  unet_4x.yaml  unrolled_8x.yaml
docs/radiomics/: headline.json
docs/radiomics/seed1/: radiomics_per_feature.csv
docs/radiomics/seed2/: radiomics_per_feature.csv
docs/radiomics/seed3/: radiomics_per_feature.csv
notebooks/: colab_mri_reconstruction.ipynb
scripts/: aggregate_radiomics_seeds.py  baseline_table.py  download_fastmri.md  make_radiomics_figures.py  smoke_test.py
src/mri_recon/: __init__.py  cli.py  evaluate.py  fft.py  masking.py  metrics.py  qc.py  radiomics_stability.py  train.py  utils.py  viz.py
src/mri_recon/data/: __init__.py  fastmri_dataset.py  splits.py  synthetic.py  transforms.py
src/mri_recon/models/: __init__.py  layers.py  unet.py  unrolled.py  zero_filled.py
tests/: test_core.py
