[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-recon"
version = "0.1.0"
description = "Physics-informed reconstruction of undersampled MRI (fastMRI)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Core physics + smoke test need only the base deps above. These add the rest:
torch = ["torch>=2.0", "h5py>=3.7"]
viz = ["matplotlib>=3.6", "scikit-image>=0.20"]
dev = ["pytest>=7.0"]

[project.scripts]
mri-recon = "mri_recon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
